# Pixelrauschen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
plugins/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h  TestPlugin.cpp  TestPlugin.h
server/: CMakeLists.txt  IEffect.h  Logging.h  Types.h  main.cpp
server/plugin/: IEffect.h  PluginLoader.cpp  PluginLoader.h
